--- a/pefi-backend/src/main/resources/application.properties
+++ b/pefi-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://db/postgres
+spring.datasource.url=jdbc:postgresql://pefi-db/postgres
 spring.datasource.username=postgres
 spring.datasource.password=AqJsdudDgdVfXdp0
 
