--- a/pefi-backend/pom.xml
+++ b/pefi-backend/pom.xml
@@ -88,6 +88,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.github.origin-energy</groupId>
+			<artifactId>java-snapshot-testing-plugin-jackson</artifactId>
+			<version>3.3.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>spring-mock-mvc</artifactId>
 			<version>5.1.1</version>
