Fix default Iban

--- a/pefi-backend/src/main/resources/application.properties
+++ b/pefi-backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=AqJsdudDgdVfXdp0
 
 spring.jpa.hibernate.ddl-auto=update
+
+party.zonarius.pefibackend.configuration.defaultIban=${PEFIBACKEND_DEFAULTIBAN}
